--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -4,19 +4,18 @@ on:
   workflow_dispatch:
   schedule:
     # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
+    - cron: '30 18 * * *'
 
 jobs:
   update-readme: # https://wakatime.com/projects
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
+      - uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # https://wakatime.com/api-key
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True" 
-          SHOW_LOC_CHART: "False"
           LOCALE: "en"
 
