--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -14,8 +14,6 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{secrets.WAKATIME_API_KEY}}
-          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          #SHOW_PROJECTS: "False"
-          #SHOW_LINES_OF_CODE: "True" 
-          #LOCALE: "en"
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
+
 
