--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -11,9 +11,13 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
         with:
-          WAKATIME_API_KEY: ${{secrets.WAKATIME_API_KEY}}
-          GH_TOKEN: ${{secrets.GH_TOKEN}}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # https://wakatime.com/api-key
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_PROJECTS: "False"
+          SHOW_LINES_OF_CODE: "True" 
+          SHOW_LOC_CHART: "False"
+          LOCALE: "en"
 
 
