--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -20,15 +20,20 @@ jobs:
           API_BASE_URL: https://wakatime.com/api # optional
           ### content
           SHOW_TITLE: true # optional
-          SECTION_NAME: waka # optional
-          BLOCKS: -> # optional
-          TIME_RANGE: all_time # optional
-          LANG_COUNT: 15 # optional
-          SHOW_TIME: true # optional
-          SHOW_TOTAL: true # optional
-          SHOW_MASKED_TIME: false # optional
-          STOP_AT_OTHER: true # optional
-          IGNORED_LANGUAGES: YAML JSON TOML # optional
+          SECTION_NAME: waka # Section name in the README
+          BLOCKS: 'time, editors, languages, os, projects' # Specify which blocks to show, separated by commas
+          TIME_RANGE: all_time # Time range for metrics (e.g., last_7_days, last_30_days, etc.)
+          LANG_COUNT: 10 # Number of languages to show
+          SHOW_TIME: true # Show time spent on each item
+          SHOW_TOTAL: true # Show total time
+          SHOW_MASKED_TIME: false # Mask the time
+          STOP_AT_OTHER: true # Stop the chart at 'Other'
+          IGNORED_LANGUAGES: YAML JSON TOML # Languages to ignore in the report
+          SHOW_GRAPH: true # Show graph of time spent (bar graph)
+          SHOW_EDITORS: true # Show which editors were used
+          SHOW_OS: true # Show which operating systems were used
+          SHOW_PROJECTS: true # Show which projects were worked on
+          SHOW_LOC_CHART: true # Show lines of code chart
           ### commit
           COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
           TARGET_BRANCH: main # optional
