--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,4 +1,4 @@
-name: waka Readme (old w-error) # https://github.com/marketplace/actions/profile-readme-development-stats
+#name: waka Readme (old w-error) # https://github.com/marketplace/actions/profile-readme-development-stats
 
 #on:
   # workflow_dispatch:
@@ -6,18 +6,17 @@ name: waka Readme (old w-error) # https://github.com/marketplace/actions/profile
   #  # Runs at 00:00AM UTC
   #  - cron: '30 18 * * *'
 
-jobs:
-  update-readme: # https://wakatime.com/projects
-    name: Update Readme with Metrics
-    runs-on: ubuntu-latest
-    steps:
-      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # https://wakatime.com/api-key
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: "False"
-          SHOW_LINES_OF_CODE: "True" 
-          SHOW_LOC_CHART: "False"
-          LOCALE: "en"
-
+#jobs:
+  #update-readme: # https://wakatime.com/projects
+    #name: Update Readme with Metrics
+    #runs-on: ubuntu-latest
+    #steps:
+      #- uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
+        #with:
+          #WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # https://wakatime.com/api-key
+          #GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          #SHOW_PROJECTS: "False"
+          #SHOW_LINES_OF_CODE: "True" 
+          #SHOW_LOC_CHART: "False"
+          #LOCALE: "en"
 
